fix: wrong background color for home list input on ios devices

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -979,7 +979,7 @@ html[data-theme="dark"] .home-tip {
   html[data-theme="light"] .home-listInput {
     border: 1px solid var(--color-text-primary);
     border-width: thin;
-    background: var(--color-text-secondary);
+    background: var(--color-bg-tertiary);
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
     outline: none !important;
   }
